--- a/src/main/java/logic/Presentacion/RegistrarDictadoClase.form
+++ b/src/main/java/logic/Presentacion/RegistrarDictadoClase.form
@@ -157,6 +157,9 @@
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="jButtonRDA"/>
       </AccessibilityProperties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRDAActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="TextoSocioD">
       <Properties>
@@ -167,6 +170,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancelar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRDCActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
