un genio soy, soy un genio

--- a/src/main/java/application/ventana.form
+++ b/src/main/java/application/ventana.form
@@ -86,6 +86,8 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemConsultarClaseActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuIitemrankingActividad">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ranking Actividades"/>
